# fun_with_teensy

./: .gitignore  CMakeLists.txt  Makefile  README.md  arm_none_eabi_gcc_toolchain.cmake
include/register/: register.h
project/: CMakeLists.txt
project/morser/: CMakeLists.txt  main.c
src/: minified_startup.c  morser.c
